--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^3.1.2",
+        
         "axios": "^0.27",
+        "bootstrap": "^5.2.2",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@vitejs/plugin-vue": "^3.1.2",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0",
-        "vue-router": "^4.0.13"
+        "vue-router": "^4.0.13",
+        "vuex": "^4.0.2"
     }
 }
