--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
         "build": "vite build"
     },
     "devDependencies": {
-        
         "axios": "^0.27",
         "bootstrap": "^5.2.2",
         "laravel-vite-plugin": "^0.6.0",
@@ -15,6 +14,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^3.1.2",
+        "sweetalert2": "^11.6.7",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.0.13",
