--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/dropzone": "^5.7.4",
         "axios": "^0.27",
         "bootstrap": "^5.2.2",
         "laravel-vite-plugin": "^0.6.0",
@@ -14,6 +15,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^3.1.2",
+        "dropzone": "^6.0.0-beta.2",
         "sweetalert2": "^11.6.7",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0",
