--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@hennge/vue3-pagination": "^1.0.17",
         "@vitejs/plugin-vue": "^3.1.2",
         "dropzone": "^6.0.0-beta.2",
         "sweetalert2": "^11.6.7",
