--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@vitejs/plugin-vue": "^3.1.2",
         "dropzone": "^6.0.0-beta.2",
         "sweetalert2": "^11.6.7",
+        "swiper": "^8.4.5",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.0.13",
